--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,5 +1,3 @@
-%h1 Pages#home
-%p
-  Find me
-  %strong in
-  app/views/pages/home.html.erb
+%h1 Login to linkedin!
+= form_tag do
+  Form contents
