--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,2 +1,3 @@
 %h1 Login to LinkedIn!
-= link_to 'Login', @oauth_url
+= link_to 'Login', @oauth_url, target: 'blank'
+= link_to 'Better login', "https://www.linkedin.com/uas/oauth2/authorization?response_type=code&client_id=#{ Settings.linkedin_key }&state=#{ (0...8).map{(65+rand(26)).chr}.join }&redirect_uri=#{ Settings.redirect_url }"
