--- a/app/assets/stylesheets/includes/base.css.scss
+++ b/app/assets/stylesheets/includes/base.css.scss
@@ -1,3 +1,18 @@
+html {
+  -webkit-font-smoothing: anti-aliased;
+  font-smoothing: anti-aliased;
+}
+
 body {
 	background: #fff;
+  font: normal 1rem sans-serif;
+  line-height: 1.5;
+  color: #555;
+  text-align: center;
+  margin: 0;
+}
+
+a {
+  color: $blue;
+  text-decoration: none;
 }
