--- a/app/assets/stylesheets/includes/layout.css.scss
+++ b/app/assets/stylesheets/includes/layout.css.scss
@@ -1,18 +1,58 @@
-#logo {
-  // layout
-  position: fixed;
-  top: 20px; left: 20px;
-  display: block;
-  width: 150px;
-  height: 150px;
-  z-index: 100;
-
-  // style
-  background: #ddd;
-}
-
 .page {
   @extend %clearfix;
   min-height: 100%;
+  width: 100%;
+  margin-bottom: 100px;
 }
 
+.global-nav {
+  // layout
+  position: fixed;
+  top: 0; left: 0; bottom: 0;
+
+  width: 150px;
+  padding: 20px;
+  
+  z-index: 100;
+
+  // style
+  background: #eee;
+  border-right: 1px solid #ddd;
+
+  > img { width: 150px; }
+  > h1 {
+    font-size: 1.4em;
+  }
+
+  @include respond-to( mobile ){
+    width: 100%;
+    height: 75px;
+    bottom: auto;
+    text-align: left;
+
+    img {
+      width: 75px;
+      float: left;
+      margin-right: 25px;
+    }
+  }
+}
+
+.wrapper {
+  padding-left: 190px;
+
+  @include respond-to( mobile ){
+    padding-left: 0;
+    padding-top: 130px;
+  }
+}
+
+
+.v-align {
+  display: table;
+
+  > .mid {
+    display: table-cell;
+    vertical-align: middle;
+  }
+}
