--- a/app/assets/stylesheets/includes/p-connections.css.scss
+++ b/app/assets/stylesheets/includes/p-connections.css.scss
@@ -1,7 +1,7 @@
 .connection-results {
   // layout
   position: relative;
-  height: 320px;
+  height: 580px;
   overflow: hidden;
   margin: 0 20px;
 
@@ -54,11 +54,6 @@
 
     &:hover {
       @include filter( grayscale( 0% ) );
-
-
-      .name {
-        text-shadow: 0 1px 3px rgba(0,0,0,.6);
-      }
     }
 
     &.hidden {
@@ -77,7 +72,7 @@
 
       // style
       color: #fff;
-      text-shadow: 0 1px 1px rgba(0,0,0,.35);
+      text-shadow: 1px 1px 3px rgba(0,0,0,.9);
     }
   }
 }
