--- a/app/assets/stylesheets/includes/tnw-font.css.scss
+++ b/app/assets/stylesheets/includes/tnw-font.css.scss
@@ -2,24 +2,15 @@
 
  @font-face {
   font-family: 'tnw-font';
-  src: url('/assets/font/tnw-font.eot?12825118');
-  src: url('/assets/font/tnw-font.eot?12825118#iefix') format('embedded-opentype'),
-       url('/assets/font/tnw-font.woff?12825118') format('woff'),
-       url('/assets/font/tnw-font.ttf?12825118') format('truetype'),
-       url('/assets/font/tnw-font.svg?12825118#tnw-font') format('svg');
+  src: url('/assets/tnw-font.eot');
+  src: url('/assets/tnw-font.eot#iefix') format('embedded-opentype'),
+       url('/assets/tnw-font.woff') format('woff'),
+       url('/assets/tnw-font.ttf') format('truetype'),
+       url('/assets/tnw-font.svg#tnw-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'tnw-font';
-    src: url('../font/tnw-font.svg?12825118#tnw-font') format('svg');
-  }
-}
-*/
+
  
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "tnw-font";
@@ -32,24 +23,13 @@
   width: 1em;
   margin-right: .2em;
   text-align: center;
-  /* opacity: .8; */
  
-  /* For safety - reset parent styles, that can break glyph codes*/
+  // For safety - reset parent styles, that can break glyph codes
   font-variant: normal;
   text-transform: none;
      
-  /* fix buttons height, for twitter bootstrap */
+  // fix buttons height, for twitter bootstrap
   line-height: 1em;
- 
-  /* Animation center compensation - magrins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
 .icon-music:before { content: '\266b'; } /* '♫' */
@@ -57,9 +37,9 @@
 .icon-info:before { content: '\e705'; } /* '' */
 .icon-basket:before { content: '\e73d'; } /* '' */
 .icon-toys:before { content: '\e79b'; } /* '' */
-.icon-games:before { content: '🏆'; } /* '\1f3c6' */
-.icon-beauty:before { content: '💧'; } /* '\1f4a7' */
-.icon-computer:before { content: '💻'; } /* '\1f4bb' */
-.icon-dvds:before { content: '💿'; } /* '\1f4bf' */
-.icon-books:before { content: '📕'; } /* '\1f4d5' */
-.icon-search:before { content: '🔍'; } /* '\1f50d' */
+.icon-games:before { content: '\1f3c6'; } /* '\1f3c6' */
+.icon-beauty:before { content: '\1f4a7'; } /* '\1f4a7' */
+.icon-computer:before { content: '\1f4bb'; } /* '\1f4bb' */
+.icon-dvds:before { content: '\1f4bf'; } /* '\1f4bf' */
+.icon-books:before { content: '\1f4d5'; } /* '\1f4d5' */
+.icon-search:before { content: '\1f50d'; } /* '\1f50d' */
