ADded id to second page.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -78,7 +78,7 @@
         Search some awesome gifts now!
   
   
-  %article.page
+  %article.page#gifts
     %h1 Gift listing
   
     %div.gift-results
