Loading thingie and colors!

--- a/app/assets/stylesheets/includes/sassy.css.scss
+++ b/app/assets/stylesheets/includes/sassy.css.scss
@@ -7,7 +7,7 @@
   Twitter   : @yoeran
 */
 
-$debugMediaQueries: true;
+$debugMediaQueries: false;
 
 // Resize anything
 @mixin resizable($direction) {
