--- a/app/assets/stylesheets/includes/layout.css.scss
+++ b/app/assets/stylesheets/includes/layout.css.scss
@@ -20,8 +20,9 @@ body {
   z-index: 100;
 
   // style
-  background: #eee;
-  border-right: 1px solid #ddd;
+  color: $blue;
+  @include background-image( linear-gradient( lighten($blue,50%), lighten($blue,40%) ) );
+
 
   > img { width: 150px; }
   > h1 {
@@ -59,4 +60,10 @@ body {
     display: table-cell;
     vertical-align: middle;
   }
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  background: #fff url('/assets/ajax-loader.gif') center center no-repeat;
 }
