--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,13 @@
       = image_tag 'logo.png'
       %h1 The GiftShop
 
+      .credits
+        A
+        = link_to "#TNW2013", "http://thenextweb.com/conference/europe/speakers#hackbattle"
+        hack by
+        = link_to "Jasper Kennis", "http://jasperkennis.nl/"
+        and
+        = link_to "Yoeran Luteijn", "http://yoeran.com/"
+
     %div.wrapper
       = yield
