--- a/app/assets/stylesheets/includes/tnw-font.css.scss
+++ b/app/assets/stylesheets/includes/tnw-font.css.scss
@@ -43,3 +43,4 @@
 .icon-dvds:before { content: '\1f4bf'; } /* '\1f4bf' */
 .icon-books:before { content: '\1f4d5'; } /* '\1f4d5' */
 .icon-search:before { content: '\1f50d'; } /* '\1f50d' */
+.icon-refresh:before { content: '\1f504'; } /* '\1f504' */
