We are now named SendGift!

--- a/app/assets/stylesheets/includes/layout.css.scss
+++ b/app/assets/stylesheets/includes/layout.css.scss
@@ -27,6 +27,7 @@ body {
   > img { width: 150px; }
   > h1 {
     font-size: 1.4em;
+    text-shadow: -1px -1px 1px lighten($blue,35%);
   }
 
   @include respond-to( mobile ){
