--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title TNW Present
+    %title SendGift
     = stylesheet_link_tag    "application", :media => "all"
     = requirejs_include_tag "application"
     = csrf_meta_tags
@@ -10,7 +10,7 @@
     
     %div.global-nav
       = image_tag 'logo.png'
-      %h1 TNW Present
+      %h1 SendGift
 
       .credits
         A
