Allowing for doing a second search.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -79,7 +79,7 @@
   
   
   %article.page.loading#gifts
-    %a.btn.right
+    %a.btn.right#load-more{ href: '#' }
       %i.icon-refresh
       Zoek opnieuw
 
