--- a/app/assets/stylesheets/includes/base.css.scss
+++ b/app/assets/stylesheets/includes/base.css.scss
@@ -20,9 +20,22 @@ a {
 h1,h2,h3,h4 {
   position: relative;
   color: $blue;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;  
 }
 
 .right {
   float: right;
   margin-right: 20px;
+}
+
+p.txt {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+abbr {
+  border-bottom: 1px dotted #555;
 }
