--- a/app/assets/stylesheets/includes/p-gifts.css.scss
+++ b/app/assets/stylesheets/includes/p-gifts.css.scss
@@ -37,6 +37,13 @@
     .gift-preview {
       @include opacity( 0 );
       @include scale( 1.5, 1.5 );
+
+      top: -375px;
+
+      @include transition(
+        all 300ms $anim,
+        top 300ms 200ms $anim
+      );
     }
 
   }
@@ -54,10 +61,11 @@
 
   .wrap {
     position: relative;
-    height: 300px;
+    height: 250px;
     overflow: hidden;
+    background: #eee;
+    @include box-shadow( 0px 3px 5px rgba(0,0,0,.3) );
   }
-
   
 
   .toggle {
@@ -66,11 +74,13 @@
     top: 0px; right: 0px;
     width: 40px;
     height: 40px;
+    z-index: 10;
 
     // text
     text-align: center;
     line-height: 40px;
     font-size: 1.5em;
+    text-shadow: 0px 1px 3px rgba(0,0,0,.3);
 
     // style
     color: #fff;
@@ -84,31 +94,39 @@
   .gift-preview {
     position: absolute;
     top: 0; left: 0;
-    @include transition( all 300ms $anim );
   }
 
   .gift-preview {
     width: 100%; height: 100%;
 
-    background-color: #fff;
+    background-color: #eee;
     background-repeat: no-repeat;
     background-position: center center;
     @include background-size( cover );
 
-
-    @include transform-origin( 0 0 );
+    @include transition(
+      all 300ms 0 $anim,
+      top 0 0 $anim
+    );
   }
 
   .gift-info {
     overflow: auto;
-    padding: 0 20px;
-    height: 300px;
+    height: 250px;
+    width: 100%;
 
     background: #333;
     color: #eee;
     font-size: 14px;
 
-    p { padding: 0 0 20px 0; margin: 0; }
+    h4 {
+      max-width: none;
+      margin-left: 20px;
+      color: #fff;
+      font-size: 1.2em;
+    }
+
+    .desc { padding: 20px; }
   }
 
   .gift-price {
