--- a/app/assets/stylesheets/includes/p-gifts.css.scss
+++ b/app/assets/stylesheets/includes/p-gifts.css.scss
@@ -122,6 +122,7 @@
     h4 {
       max-width: none;
       margin-left: 20px;
+      margin-bottom: 20px;
       color: #fff;
       font-size: 1.2em;
     }
