Affiliate URL. CSS fixes.

--- a/app/assets/stylesheets/includes/form.css.scss
+++ b/app/assets/stylesheets/includes/form.css.scss
@@ -39,7 +39,7 @@
 .big-search {
   position: relative;
   width: intrinsic;
-  margin: 0 auto;
+  margin: 0 auto 10px auto;
   
   input {
     // layout
