--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title SendGift
     = stylesheet_link_tag    "application", :media => "all"
-    = requirejs_include_tag "application"
+    = requirejs_include_tag "application.js"
     = csrf_meta_tags
 
   %body
