Using application js include tag.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title SendGift
-    = stylesheet_link_tag    "application", :media => "all"
-    = requirejs_include_tag "application.js"
+    = stylesheet_link_tag "application", :media => "all"
+    = javascript_include_tag "application.js"
     = csrf_meta_tags
 
   %body
