--- a/app/assets/stylesheets/includes/base.css.scss
+++ b/app/assets/stylesheets/includes/base.css.scss
@@ -34,6 +34,10 @@ p.txt {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
+
+  @include respond-to( mobile ){
+    width: 90%;
+  }
 }
 
 abbr {
