--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,12 +3,12 @@
     .mid
       %h1 Welcome to SendGift!
       %p.txt
-        SendGift makes it easy to find the perfect gift for your business relation via our
+        SendGift makes it easy to find the perfect gift for your business relation with our
         %strong
           %abbr{ title: "Mega Super Awesome"} MSA
           Search Engine&trade;.
         And
-        %abbr{ title: "Actually Bol.com does all the awesome work."} a bit of help
+        %abbr{ title: "Actually Bol.com does all of the searching..."} a bit of help
         from the Bol.com API ;)
       %p.txt To start off, we need you to connect to LinkedIn so we can find your relations and help you on your way!
       = link_to 'Connect to LinkedIn', @oauth_url, class: "btn"
