--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -25,9 +25,10 @@
     .connection-results
       .fade
       .persons
-      - for connection in @connections.all
-        %button{ type: "button", class: "person", style: "background-image:url(#{ connection.picture_url })", data: { name: "#{ connection.first_name.downcase } #{ connection.last_name.downcase }", id: connection.id }  }
-          %span.name= "#{ connection.first_name } #{ connection.last_name }"
+      - for connection in @connections.all.shuffle
+        - unless connection.picture_urls.nil? or connection.picture_urls.all.nil?
+          %button{ type: "button", class: "person", style: "background-image:url(#{ connection.picture_urls.all.first })", data: { name: "#{ connection.first_name } #{ connection.last_name }".downcase, id: connection.id }  }
+            %span.name= "#{ connection.first_name } #{ connection.last_name }"
 
   -#
     %article.page
