Small textual changes.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -9,8 +9,8 @@
           Search Engine&trade;.
         And
         %abbr{ title: "Actually Bol.com does all of the searching..."} a bit of help
-        from the Bol.com API ;)
-      %p.txt To start off, we need you to connect to LinkedIn so we can find your relations and help you on your way!
+        from Bol.com ;)
+      %p.txt To get started, we need you to connect to LinkedIn so we can find your relations and help you on your way!
       = link_to 'Connect to LinkedIn', @oauth_url, class: "btn"
 - else
   %article.page#start
